--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Bar Chart in D3</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+<html>
+  <head>
+    <title>My First D3 Bar Chart</title>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <style>
+      /* Add some CSS styling for the chart */
+      .bar {
+        fill: steelblue;
+      }
+    </style>
+  </head>
+  <body>
+    <svg width="400" height="200"></svg>
     <script src="script.js"></script>
-</head>
-<body>
-    <div id="chart-container"></div>
-</body>
+  </body>
 </html>
