Add comments to js file - add data, append,

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       /* Add some CSS styling for the chart */
       .bar {
-        fill: steelblue;
+        fill: rgb(94, 238, 11);
       }
     </style>
   </head>
