--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="chart-container"></div>
+    <div id="tooltip" class="tooltip" style="display: none;"></div>
     <script src="script.js"></script>
   </body>
 </html>
